Fixed right side of main stretching out

--- a/style.css
+++ b/style.css
@@ -17,9 +17,8 @@ div {
 }
 
 body {
-    height: 100vh;
     display: grid;
-    grid-template: auto 5fr / 1fr 5fr;
+    grid-template: auto 1fr / 1fr 5fr;
 }
 
 .sidebar {
@@ -195,7 +194,7 @@ body {
 .main-content {
     display: grid;
     grid-column: 2 / 3;
-    grid-template: 1fr 1fr / 3fr 1fr;    
+    grid-template-columns: 3fr 1fr;    
     padding: 30px;
     background-color: var(--white-blue);
 }
@@ -239,8 +238,11 @@ a {
     text-decoration: none;
 }
 
-
-
+.main-right-side {
+    display: grid;
+    /* flex-direction: column; */
+    padding: 0px;
+}
 
 
 .main-announcements-container {
